Thêm danh mục vụ việc
Danh mục này dùng để quản lý vụ việc, dự án, công trinh

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -142,6 +142,7 @@
 		<script src="modules/reports/ctbanle/script.js"></script>
 		
 		<script src="modules/lists/dmbp/script.js"></script>
+		<script src="modules/lists/dmdt/script.js"></script>
 		<script src="modules/lists/dmloaits/script.js"></script>
 		<script src="modules/lists/dmtanggiamts/script.js"></script>
 		<script src="modules/lists/dmnguonvon/script.js"></script>
