Thêm phần nhật đầu kỳ cho vụ việc, dự án

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -74,6 +74,8 @@
 		<script src="modules/lists/cdtk/script.js"></script>
 		<script src="modules/lists/cdkh/script.js"></script>
 		<script src="modules/lists/cdvt/script.js"></script>
+		<script src="modules/lists/cddt/script.js"></script>
+		
 		<script src="modules/lists/ptthanhtoan/script.js"></script>
 		
 		<script src="modules/vouchers/vatvao/script.js"></script>
