Sửa lỗi danh mục vụ việc và thêm báo cáo chi tiết theo vụ việc

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -113,6 +113,8 @@
 		<script src="modules/reports/sctcnkh/script.js"></script>
 		<script src="modules/reports/cdpskh/script.js"></script>
 		
+		<script src="modules/reports/sctdt/script.js"></script>
+		
 		<script src="modules/reports/bkvatvao/script.js"></script>
 		<script src="modules/reports/bkvatra/script.js"></script>
 		<script src="modules/lists/kbmtkgtgt/script.js"></script>
