--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -114,6 +114,7 @@
 		<script src="modules/reports/cdpskh/script.js"></script>
 		
 		<script src="modules/reports/sctdt/script.js"></script>
+		<script src="modules/reports/cdpsdt/script.js"></script>
 		
 		<script src="modules/reports/bkvatvao/script.js"></script>
 		<script src="modules/reports/bkvatra/script.js"></script>
