--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -271,6 +271,7 @@
 											<li><a href="#profile"  ng-click='disable_menu()'><i class='fa fa-user fa-fw'></i> Thông tin cá nhân</a></li>
 											<li><a href="#app" ng-click='disable_menu()'><i class="fa fa-building fa-fw"></i> Danh sách công ty</a></li>
 											<li><a href="#colleague" ng-click='disable_menu()'><i class="fa fa-group fa-fw"></i> Nhóm</a></li>
+											<li ng-show='user.admin'><a href="#users-management" ng-click=''><i class="fa fa-cog fa-fw"></i> Quản trị</a></li>
 											<li><a href="#logout" ng-click='disable_menu()'><i class='fa fa-sign-out fa-fw'></i> Đăng xuất</a></li>
 										</ul>
 									</div>
