Thêm trang quản lý người dùng
Trang này chỉ thấy nếu người dùng là admin (khai báo user admin trong
file configs.js)

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -57,6 +57,7 @@
 		<script src="modules/lists/colleague/script.js"></script>
 		<script src="modules/lists/notification/script.js"></script>
 		<script src="modules/lists/message/script.js"></script>
+		<script src="modules/lists/users/script.js"></script>
 	
 		
 		<script src="modules/lists/dvcs/script.js"></script>
@@ -271,7 +272,7 @@
 											<li><a href="#profile"  ng-click='disable_menu()'><i class='fa fa-user fa-fw'></i> Thông tin cá nhân</a></li>
 											<li><a href="#app" ng-click='disable_menu()'><i class="fa fa-building fa-fw"></i> Danh sách công ty</a></li>
 											<li><a href="#colleague" ng-click='disable_menu()'><i class="fa fa-group fa-fw"></i> Nhóm</a></li>
-											<li ng-show='user.admin'><a href="#users-management" ng-click=''><i class="fa fa-cog fa-fw"></i> Quản trị</a></li>
+											<li ng-show='user.admin'><a href="#users" ng-click=''><i class="fa fa-cog fa-fw"></i> Quản trị</a></li>
 											<li><a href="#logout" ng-click='disable_menu()'><i class='fa fa-sign-out fa-fw'></i> Đăng xuất</a></li>
 										</ul>
 									</div>
