Nâng cấp và sửa các lỗi liên quan đến quản lý người sử dụng
Quyền admin:
- Cho phép xem danh sách các công ty của một người sử dụng
- Cho phép khóa người sử dụng

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -332,6 +332,7 @@
 			<div ng-class ='printing || !isLogined || !id_app? "":"page-wrapper"'>
 				<div class="row">
 					<div class="col-xs-12"  style="margin-top:10px">
+						<div class="alert alert-danger" ng-show="error">{{error}}</div>
 						<div class='page' ng-view></div>
 					</div>
 				</div>
