Thêm danh mục quản lý mẫu in
Danh mục này dùng để khai báo, cập nhật các file excel template dùng cho
in ấn, xuất dữ liệu

--- a/public/administrator/index.html
+++ b/public/administrator/index.html
@@ -58,6 +58,7 @@
 		<script src="modules/lists/notification/script.js"></script>
 		<script src="modules/lists/message/script.js"></script>
 		<script src="modules/lists/users/script.js"></script>
+		<script src="modules/lists/rpt/script.js"></script>
 	
 		
 		<script src="modules/lists/dvcs/script.js"></script>
